add favicons and fonts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,10 @@
 		Place all other favicons in website root (e.g. http://web.dev/favicon.ico).
 		Add your font license here, if necessary.
 	-->
+
+	<meta name="application-name" content="{{ site.title }}"/>
+	<meta name="msapplication-TileColor" content="#fff"/>
+	<meta name="msapplication-TileImage" content="{{ site.url }}/tile.png"/>
 </head>
 
 <body{% if page.section %} class="v-{{ page.section }}"{% endif%} >
