--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -4,14 +4,14 @@
 
 // Typography
 
-$alpha-font-family	: sans-serif;
+$alpha-font-family	: 'Fira Sans', sans-serif;
 $alpha-font-size	: 16; // pixel-value
 $alpha-font-weight	: 400;
 $alpha-line-height	: 1.5; // em-value
 $alpha-baseline-grid: 7; // pixel-value
 $alpha-leading		: 1; // multiplier
 
-$beta-font-family	: sans-serif;
+$beta-font-family	: 'Fira-Sans', sans-serif;
 $beta-font-weight	: 700;
 
 // Grid
