setting up the theme and style

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,5 @@
-<footer class="holder footer-holder">
-	<div class="row footer-row">
-		<div class="footer">
-			<div class="inner">
-				<p>Informatie Architectuur.be is een initiatief van <a href="https://twitter.com/rcallewaert">@rcallewaert</a>, <a href="https://twitter.com/hannesdh">@hannesdh</a> en <a href="https://twitter.com/bram_">@bram_</a>. Wil je meewerken, heb je vragen of ideeën, … neem dan contact op met ons.</p>
-			</div>
-		</div>
+<footer class="footer">
+	<div class="row">
+		<p>Informatie Architectuur.be is een initiatief van <a href="https://twitter.com/rcallewaert">@rcallewaert</a>, <a href="https://twitter.com/hannesdh">@hannesdh</a> en <a href="https://twitter.com/bram_">@bram_</a>. <br><strong>Wil je meewerken, heb je vragen of ideeën</strong>, … neem dan contact op met ons.</p>
 	</div>
 </footer>
