--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,9 @@
 	<!-- Custom modernizr build: http://modernizr.com — load other JavaScript at the end of document -->
 	<script src="{{ site.url }}/js/modernizr.custom.js"></script>
 
+	<!-- Fonts -->
+	<link href='http://fonts.googleapis.com/css?family=Merriweather:400,700,300,300italic,400italic,700italic' rel='stylesheet' type='text/css'>
+
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="{{ site.url }}/css/screen.css">
 
