--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,20 +1,21 @@
-<div class="holder header-holder">
-	<div class="row header-row">
-		<div class="header">
-			<div class="inner">
-				{% if page.url contains "index" %}
-					<h1 class="logo">{{ site.title }}</h1>
-				{% else %}
-					<h1 class="logo"><a href="{{ site.url }}/">{{ site.title }}</a></h1>
-				{% endif %}
+<header class="header">
+	<div class="row">
+		{% if page.section contains "home" %}
+			<p class="logo">{{ site.title }}</p>
+		{% else %}
+			<a href="{{ site.url }}/" class="logo">{{ site.title }}</a>
+		{% endif %}
 
- 				<nav class="main-nav">
-					<ul>
-						<li {% if page.url contains "index" %}class="selected"{% endif %}><a href="{{ site.url }}/index.html">Home</a></li>
-						<li {% if page.url contains "styleguide" %}class="selected"{% endif %}><a href="{{ site.url }}/styleguide.html">Styleguide</a></li>
-					</ul>
-				</nav>
-			</div>
-		</div>
+		<nav class="main-nav">
+			<ul>
+				{% if page.section contains "home" %}
+				{% else %}
+				<li {% if page.url contains "index" %}class="selected"{% endif %}><a href="{{ site.url }}/index.html">Home</a></li>
+				{% endif %}
+				<li {% if page.url contains "blog" %}class="selected"{% endif %}><a href="{{ site.url }}/blog.html">Blog</a></li>
+				<li {% if page.url contains "register" %}class="selected"{% endif %}><a href="{{ site.url }}/register.html">Inschrijven</a></li>
+<!-- 				<li {% if page.url contains "styleguide" %}class="selected"{% endif %}><a href="{{ site.url }}/styleguide.html">Styleguide</a></li> -->
+			</ul>
+		</nav>
 	</div>
-</div>
+</header>
