--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -40,9 +40,8 @@
 
 	// Theme Demo Modules: for demo purpose only. Replace this with your own modules.
 
-		@import "theme/modules/home";
+		@import "theme/modules/main";
 		@import "theme/modules/styleguide";
-		@import "theme/modules/grid";
 
 // Print
 
