replace merriweather font, put it local

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -4,7 +4,7 @@
 
 // Typography
 
-$alpha-font-family	: 'Merriweather', serif;
+$alpha-font-family	: 'merriweather', serif;
 $alpha-font-size	: 16; // pixel-value
 $alpha-font-weight	: 400;
 $alpha-line-height	: 1.5; // em-value
