--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 	<script src="{{ site.url }}/js/modernizr.custom.js"></script>
 
 	<!-- Fonts -->
-	<link href='http://fonts.googleapis.com/css?family=Merriweather:400,700,300,300italic,400italic,700italic' rel='stylesheet' type='text/css'>
+	<!-- <link href='http://fonts.googleapis.com/css?family=Merriweather:400,700,300,300italic,400italic,700italic' rel='stylesheet' type='text/css'> -->
 
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="{{ site.url }}/css/screen.css">
