--- a/scss/theme/_fonts.scss
+++ b/scss/theme/_fonts.scss
@@ -108,3 +108,47 @@
 	font-style: normal;
 }
 
+@font-face {
+	font-family: 'merriweather';
+	src: url('../fonts/eot/merriweather-bold-webfont.eot');
+	src: url('../fonts/eot/merriweather-bold-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('../fonts/woff/merriweather-bold-webfont.woff') format('woff'),
+		 url('../fonts/ttf/merriweather-bold-webfont.ttf') format('truetype'),
+		 url('../fonts/svg/merriweather-bold-webfont.svg#merriweatherbold') format('svg');
+	font-weight: 700;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'merriweather';
+	src: url('../fonts/eot/merriweather-bolditalic-webfont.eot');
+	src: url('../fonts/eot/merriweather-bolditalic-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('../fonts/woff/merriweather-bolditalic-webfont.woff') format('woff'),
+		 url('../fonts/ttf/merriweather-bolditalic-webfont.ttf') format('truetype'),
+		 url('../fonts/svg/merriweather-bolditalic-webfont.svg#merriweatherbold_italic') format('svg');
+	font-weight: 700;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: 'merriweather';
+	src: url('../fonts/eot/merriweather-italic-webfont.eot');
+	src: url('../fonts/eot/merriweather-italic-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('../fonts/woff/merriweather-italic-webfont.woff') format('woff'),
+		 url('../fonts/ttf/merriweather-italic-webfont.ttf') format('truetype'),
+		 url('../fonts/svg/merriweather-italic-webfont.svg#merriweatheritalic') format('svg');
+	font-weight: normal;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: 'merriweather';
+	src: url('../fonts/eot/merriweather-regular-webfont.eot');
+	src: url('../fonts/eot/merriweather-regular-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('../fonts/woff/merriweather-regular-webfont.woff') format('woff'),
+		 url('../fonts/ttf/merriweather-regular-webfont.ttf') format('truetype'),
+		 url('../fonts/svg/merriweather-regular-webfont.svg#merriweatherregular') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
