--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,4 +2,7 @@
 	<div class="row">
 		<p>Informatie Architectuur.be is een initiatief van <a href="https://twitter.com/rcallewaert">@rcallewaert</a>, <a href="https://twitter.com/hannesdh">@hannesdh</a> en <a href="https://twitter.com/bram_">@bram_</a>. <br><strong>Wil je meewerken, heb je vragen of ideeën</strong>, … neem dan contact op met ons.</p>
 	</div>
+	<div class="row">
+		<a href="http://getchopstick.com/" title="Made with Chopstick" class="chopstick">Made with Chopstick</a>
+	</div>
 </footer>
