--- a/scss/theme/modules/_main.scss
+++ b/scss/theme/modules/_main.scss
@@ -20,11 +20,6 @@
 		}
 	}
 
-	h1 {
-		font-weight: 500;
-		@include baseline-dimensions(3,1,1,1);
-	}
-
 	p {
 		padding-left: 5px;
 		color: $beta-text-color;
@@ -35,19 +30,19 @@
 		font-weight: 300;
 	}
 
-	a {
+	.intro a {
 		border-bottom: 1px solid lighten($alpha-ui-color,30);
 
 		&:hover,
 		&:focus {
-			border-bottom: 1px solid lighten($alpha-ui-color,10);
+			border-bottom: 1px solid lighten($alpha-ui-color,40);
 		}
 	}
 }
 
 .blog,
 .main,
-.page {
+.cta {
 	@extend %clearfix;
 	background-color: $white-color;
 }
@@ -58,16 +53,6 @@
 
 	@include mq($bp3) {
 		@include em-padding-tb(7,9);
-	}
-
-	h1 {
-		font-weight: 500;
-		@include baseline-dimensions(3,1,1,1);
-	}
-
-	h2 {
-		@include text-dimensions(21, 0, 0.5, 2, 0);
-		font-weight: 700;
 	}
 
 	.tagline {
@@ -94,6 +79,12 @@
 	}
 }
 
+.header__details {
+	font-family: $beta-font-family;
+	font-style: italic;
+	color: $beta-text-color;
+}
+
 .blog--detail__header {
 	@include box-(12,0,0);
 	border-bottom: 1px solid lighten($grey-color, 30);
@@ -106,14 +97,33 @@
 	}
 }
 
+.blog--detail__body {
+	@include box-(12,0,0);
+
+	@include mq($bp3) {
+		@include box-(8,0,0);
+		@include push-left(2);
+	}
+
+	p {
+		overflow: visible;
+	}
+
+	img {
+		@include mq($bp3) {
+			margin-left: -24%;
+			min-width: 147.5%;
+		}
+	}
+}
+
 .blog--list {
-	border-left: 1px dotted lighten($grey-color,40);
-	border-top: 1px solid lighten($grey-color,30);
+	border-left: 1px dotted lighten($grey-color,35);
+	border-top: 6px solid lighten($grey-color,47);
 
 	h2 {
-		@include text-dimensions(18, 1, 0, 0, 0);
+		@include text-dimensions(18,1,0,0,0);
 		font-weight: 500;
-		padding-bottom: 0;
 	}
 }
 
@@ -125,9 +135,18 @@
 
 }
 
-.page {
-	border-top: 1px solid lighten($grey-color,30);
+.cta {
 	text-align: center;
+	@include px-padding-lr(1);
+}
+
+.cta--home {
+	@include em-padding-tb(4,4);
+	background-color: $alpha-text-color;
+}
+
+.cta--post {
+	border-top: 6px solid lighten($grey-color,47);
 	@include em-padding-tb(2,4);
 }
 
@@ -139,20 +158,15 @@
 .media--block {
 	float: left;
 	width: 100%;
-	@include em-padding-tb(1, 0.5);
+	@include em-padding-tb(0.3, 0.5);
 	@include px-padding-lr(1.3);
-	border-bottom: 1px dotted lighten($grey-color,40);
-	border-right: 1px dotted lighten($grey-color,40);
+	border-bottom: 1px dotted lighten($grey-color,35);
+	border-right: 1px dotted lighten($grey-color,35);
 
 	@include mq($bp3) {
 		width: 50%;
 		max-height: 14em;
-	}
-
-	@include mq($bp4) {
-		width: 33.33333%;
-		max-height: 16em;
-		@include em-padding-tb(1.5, 1);
+		@include em-padding-tb(0.2, 1);
 		@include px-padding-lr(2);
 	}
 
@@ -167,11 +181,16 @@
 }
 
 .media--link .media__body {
-	opacity: 0.8;
+	opacity: 1;
+}
 
-	&:hover,
-	&:focus {
-		opacity: 1;
-	}
+.media--link:hover .media__body,
+.media--link:focus .media__body {
+	opacity: 0.8;
+}
+
+.share-list {
+	@include list-nav;
+	@include em-margin-tb(3, 0);
 }
 
