--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -75,7 +75,7 @@
 	<div class="cta cta--post">
 		<div class="row">
 			<h3>Ja! Op 15 februari 2014 komt er een Wereld IA in ons landje.</h3>
-				<a href="{{site.url}}/register.html" class="btn btn--pos">Nu inschrijven</a>
+				<a href="{{site.url}}/register.html" class="btn btn--pos btn--go">Nu inschrijven</a>
 		</div>
 	</div>
 
