--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -8,11 +8,12 @@
 
 // Vendor Dependencies: add things like bourbon or compass imports here.
 
-	// @import "compass";
+	@import "compass";
 
 // Assets
 
 	@import "theme/fonts";
+	@import "theme/icon-font";
 
 // Shared: do not delete any of this.
 
