--- a/scss/theme/_base.scss
+++ b/scss/theme/_base.scss
@@ -135,6 +135,7 @@ img {
 a {
 	text-decoration: none;
 	color: $alpha-ui-color;
+	@include transition(all 0.2s ease-in);
 
 	&:visited {
 		color: $alpha-link-colorvisited;
