--- a/scss/patterns/_helpers.scss
+++ b/scss/patterns/_helpers.scss
@@ -16,3 +16,22 @@
 		left: 0;
 	}
 }
+
+
+.iframe-embed {
+	width: 100%;
+	height: 800px;
+	position: relative;
+	overflow: hidden;
+	background-color: lighten($grey-color,50);
+	border: 1px dotted lighten($grey-color,40);
+	padding: 0.5em;
+	@include margin-bottom(1.5);
+
+	iframe {
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+	}
+}
