--- a/scss/theme/modules/_main.scss
+++ b/scss/theme/modules/_main.scss
@@ -47,6 +47,28 @@
 	background-color: $white-color;
 }
 
+// Main
+.main__header {
+	@include box-(12,0,0);
+	@include em-padding-tb(1,3);
+
+	@include mq($bp3) {
+		text-align: center;
+		@include box-(8,0,0);
+		@include push-left(2);
+		@include em-padding-tb(7,3);
+	}
+
+	p {
+		color: $beta-text-color;
+		@include baseline-dimensions(0,1,3,1);
+	}
+}
+
+.main__body {
+
+}
+
 // Blog
 .blog--detail {
 	@include em-padding-tb(1,3);
