--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
 	<div class="row">
-		<p>Informatie Architectuur.be is een initiatief van <a href="https://twitter.com/rcallewaert">@rcallewaert</a>, <a href="https://twitter.com/hannesdh">@hannesdh</a> en <a href="https://twitter.com/bram_">@bram_</a>. <br><strong>Wil je meewerken, heb je vragen of ideeën</strong>, … neem dan contact op met ons.</p>
+      <p>WIAD2014 is een werelwijd initiatief en in België zetten <a href="http://www.thesedays.com/" title="Nascom">These days</a>,<a href="http://www.nascom.be/" title="Nascom">Nascom</a>, <a href="http://istoireservices.be/" title="iStoire Services">iStoire Services</a> en <a href="http://wijs.be/nl" title="Wijs">Wijs</a> hun schouders onder de organisatie. Vragen of goesting om te sponsoren? <a href="mailto:info@informatiearchitectuur.be">Mail ons</a>.</p>
 	</div>
 	<div class="row">
 		<a href="http://getchopstick.com/" title="Made with Chopstick" class="chopstick">Made with Chopstick</a>
