--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -74,8 +74,8 @@
 
 	<div class="cta cta--post">
 		<div class="row">
-			<h3>Ja! Op 15 februari 2014 komt er een Wereld IA in ons landje.</h3>
-				<a href="{{site.url}}/register.html" class="btn btn--pos btn--go">Nu inschrijven</a>
+			<h3>Helemaal overtuigd nu ?</h3>
+				<a href="{{site.url}}/register.html" class="btn btn--pos btn--go">Gratis inschrijven</a>
 		</div>
 	</div>
 
