--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -49,7 +49,7 @@
 		<div class="row">
 			<header class="blog--detail__header">
 				<h1>{{ page.title }}</h1>
-				<p class="header__details">{{ page.date | date_to_string }}, <a href="{{ page.author_url }}">{{ page.post_author }}</a></p>
+              <p class="header__details">{{ page.date | date_to_string }}</p>
 			</header>
 		</div>
 		<div class="row">
