--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -74,7 +74,7 @@
 
 	<div class="cta cta--post">
 		<div class="row">
-			<h3>Helemaal overtuigd nu ?</h3>
+			<h3>Helemaal overtuigd ?</h3>
 				<a href="{{site.url}}/register.html" class="btn btn--pos btn--go">Gratis inschrijven</a>
 		</div>
 	</div>
