--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -49,7 +49,7 @@
 		<div class="row">
 			<header class="blog--detail__header">
 				<h1>{{ page.title }}</h1>
-              <p class="header__details">{{ page.date | date_to_string }}</p>
+				<p class="header__details">{{ page.date | date_to_string }}</p>
 			</header>
 		</div>
 		<div class="row">
@@ -72,12 +72,12 @@
 
 	</article>
 
-	<div class="cta cta--post">
+	<aside class="cta cta--post">
 		<div class="row">
 			<h3>Helemaal overtuigd ?</h3>
 				<a href="{{site.url}}/register.html" class="btn btn--pos btn--go">Gratis inschrijven</a>
 		</div>
-	</div>
+	</aside>
 
 	{% include footer.html %}
 
