--- a/css/screen.css
+++ b/css/screen.css
@@ -936,12 +936,17 @@ body {
 
 /* line 38, ../scss/theme/_base.scss */
 hr {
-  border: 1px solid #dddddd;
-  border-width: 1px 0 0;
+  border: none;
+  border-bottom: 1px solid #dddddd;
   clear: both;
-  margin: 0 0 1.5em; }
+  margin-top: 0.9375em;
+  margin-bottom: 0.625em; }
 
-/* line 54, ../scss/theme/_base.scss */
+/* line 46, ../scss/theme/_base.scss */
+.divider--dotted {
+  border-bottom: 1px dotted #dddddd; }
+
+/* line 59, ../scss/theme/_base.scss */
 h1,
 h2,
 h3,
@@ -952,7 +957,7 @@ h6 {
   font-family: "Fira Sans", sans-serif;
   text-rendering: optimizelegibility; }
 
-/* line 60, ../scss/theme/_base.scss */
+/* line 65, ../scss/theme/_base.scss */
 h1 {
   font-size: 2.82715em;
   line-height: 1.238;
@@ -960,15 +965,15 @@ h1 {
   padding-bottom: 0.15475em;
   font-weight: 500; }
 
-/* line 65, ../scss/theme/_base.scss */
-h2 {
-  font-size: 1.3125em;
-  line-height: 1.14286em;
-  margin-bottom: 0em;
-  padding-top: 1.14286em;
-  font-weight: 700; }
-
 /* line 70, ../scss/theme/_base.scss */
+h2 {
+  font-size: 1.125em;
+  line-height: 1.33333em;
+  margin-bottom: 0em;
+  padding-top: 1.33333em;
+  font-weight: 500; }
+
+/* line 75, ../scss/theme/_base.scss */
 h3 {
   font-size: 1.414em;
   line-height: 1.54703;
@@ -976,7 +981,7 @@ h3 {
   padding-bottom: 0.30941em;
   font-weight: 500; }
 
-/* line 77, ../scss/theme/_base.scss */
+/* line 82, ../scss/theme/_base.scss */
 h4,
 h5,
 h6 {
@@ -986,7 +991,7 @@ h6 {
   padding-bottom: 0.4375em;
   font-weight: 500; }
 
-/* line 88, ../scss/theme/_base.scss */
+/* line 93, ../scss/theme/_base.scss */
 p,
 ol,
 ul,
@@ -999,17 +1004,17 @@ pre {
   padding-top: 0.4375em;
   padding-bottom: 0.875em; }
 
-/* line 94, ../scss/theme/_base.scss */
+/* line 99, ../scss/theme/_base.scss */
 ul,
 ol,
 blockquote {
   padding-left: 1em; }
 
-/* line 98, ../scss/theme/_base.scss */
+/* line 103, ../scss/theme/_base.scss */
 blockquote {
   font-style: italic; }
 
-/* line 102, ../scss/theme/_base.scss */
+/* line 107, ../scss/theme/_base.scss */
 table {
   text-align: left;
   width: 100%;
@@ -1020,7 +1025,7 @@ table {
   line-height: 1.71429em;
   margin-bottom: 3.42857em; }
 
-/* line 111, ../scss/theme/_base.scss */
+/* line 116, ../scss/theme/_base.scss */
 caption {
   font-family: "merriweather", serif;
   text-align: left;
@@ -1030,17 +1035,17 @@ caption {
   padding-bottom: 0.75em;
   margin-bottom: 0.75em; }
 
-/* line 122, ../scss/theme/_base.scss */
+/* line 127, ../scss/theme/_base.scss */
 td,
 th {
   padding: .25em 1em .25em 0;
   border-bottom: 1px solid #f7f7f7; }
 
-/* line 127, ../scss/theme/_base.scss */
+/* line 132, ../scss/theme/_base.scss */
 img {
   max-width: 100%; }
 
-/* line 135, ../scss/theme/_base.scss */
+/* line 140, ../scss/theme/_base.scss */
 a {
   text-decoration: none;
   color: #0a69e7;
@@ -1048,31 +1053,31 @@ a {
   -moz-transition: all 0.2s ease-in;
   -o-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in; }
-  /* line 140, ../scss/theme/_base.scss */
+  /* line 145, ../scss/theme/_base.scss */
   a:visited {
     color: #095ecf; }
-  /* line 144, ../scss/theme/_base.scss */
+  /* line 149, ../scss/theme/_base.scss */
   a:hover {
     text-decoration: none;
     color: #2e84f6; }
-  /* line 149, ../scss/theme/_base.scss */
+  /* line 154, ../scss/theme/_base.scss */
   a:focus {
     outline: thin dotted;
     color: #2e84f6; }
-  /* line 155, ../scss/theme/_base.scss */
+  /* line 160, ../scss/theme/_base.scss */
   a:hover, a:active {
     outline: 0; }
 
-/* line 164, ../scss/theme/_base.scss */
+/* line 169, ../scss/theme/_base.scss */
 img {
   vertical-align: top;
   border: 0; }
 
-/* line 173, ../scss/theme/_base.scss */
+/* line 178, ../scss/theme/_base.scss */
 form {
   padding: 0 0 0.875em; }
 
-/* line 178, ../scss/theme/_base.scss */
+/* line 183, ../scss/theme/_base.scss */
 legend,
 label {
   display: block;
@@ -1083,7 +1088,7 @@ label {
   padding-top: 1.3125em;
   padding-bottom: 0.4375em; }
 
-/* line 205, ../scss/theme/_base.scss */
+/* line 210, ../scss/theme/_base.scss */
 input[type="input"],
 input[type="text"],
 input[type="email"],
@@ -1123,7 +1128,7 @@ textarea {
   padding-top: 0.4375em;
   padding-bottom: 0.4375em;
   height: 2.1875em; }
-  /* line 219, ../scss/theme/_base.scss */
+  /* line 224, ../scss/theme/_base.scss */
   input[type="input"]:focus,
   input[type="text"]:focus,
   input[type="email"]:focus,
@@ -1147,26 +1152,26 @@ textarea {
     outline-color: #dddddd;
     border-color: #aaaaaa; }
 
-/* line 226, ../scss/theme/_base.scss */
+/* line 231, ../scss/theme/_base.scss */
 textarea {
   height: auto; }
 
-/* line 232, ../scss/theme/_base.scss */
+/* line 237, ../scss/theme/_base.scss */
 ::-webkit-input-placeholder {
   font-family: "Fira Sans", sans-serif;
   font-style: italic; }
 
-/* line 237, ../scss/theme/_base.scss */
+/* line 242, ../scss/theme/_base.scss */
 ::-moz-placeholder {
   font-family: "Fira Sans", sans-serif;
   font-style: italic; }
 
-/* line 242, ../scss/theme/_base.scss */
+/* line 247, ../scss/theme/_base.scss */
 :-ms-input-placeholder {
   font-family: "Fira Sans", sans-serif;
   font-style: italic; }
 
-/* line 250, ../scss/theme/_base.scss */
+/* line 255, ../scss/theme/_base.scss */
 input[type="submit"],
 button {
   font-size: 1em;
@@ -1201,7 +1206,7 @@ button {
     color: #FFF; }
 
 @media (min-width: 42.5em) {
-  /* line 276, ../scss/theme/_base.scss */
+  /* line 281, ../scss/theme/_base.scss */
   input[type="input"],
   input[type="text"],
   input[type="email"],
@@ -1229,11 +1234,11 @@ button {
     padding-bottom: 0.875em;
     height: 3.0625em; }
 
-  /* line 280, ../scss/theme/_base.scss */
+  /* line 285, ../scss/theme/_base.scss */
   textarea {
     height: auto; }
 
-  /* line 285, ../scss/theme/_base.scss */
+  /* line 290, ../scss/theme/_base.scss */
   input[type="submit"],
   button {
     font-size: 1em;
@@ -1244,7 +1249,7 @@ button {
     display: inline-block;
     width: auto; } }
 @media (min-width: 71.25em) {
-  /* line 312, ../scss/theme/_base.scss */
+  /* line 317, ../scss/theme/_base.scss */
   input[type="input"],
   input[type="text"],
   input[type="email"],
@@ -1272,11 +1277,11 @@ button {
     padding-bottom: 0.61881em;
     height: 2.47525em; }
 
-  /* line 316, ../scss/theme/_base.scss */
+  /* line 321, ../scss/theme/_base.scss */
   textarea {
     height: auto; }
 
-  /* line 321, ../scss/theme/_base.scss */
+  /* line 326, ../scss/theme/_base.scss */
   input[type="submit"],
   button {
     font-size: 1.414em;
@@ -1285,7 +1290,7 @@ button {
     padding-bottom: 0.61881em;
     height: 2.47525em; } }
 @media (min-width: 71.25em) {
-  /* line 333, ../scss/theme/_base.scss */
+  /* line 338, ../scss/theme/_base.scss */
   html {
     font-size: 112.5%; } }
 /* line 5, ../scss/theme/_frame.scss */
@@ -1480,17 +1485,17 @@ a.chopstick {
   a.chopstick:hover, a.chopstick:focus, a.chopstick:visited {
     border-bottom: 0; }
 
-/* line 5, ../scss/theme/modules/_main.scss */
+/* line 4, ../scss/theme/modules/_main.scss */
 .hero {
   background-color: white;
   padding-top: 0.625em;
   padding-bottom: 1.875em; }
   @media screen and (min-width: 42.5em) {
-    /* line 5, ../scss/theme/modules/_main.scss */
+    /* line 4, ../scss/theme/modules/_main.scss */
     .hero {
       padding-top: 4.375em;
       padding-bottom: 5.625em; } }
-  /* line 13, ../scss/theme/modules/_main.scss */
+  /* line 12, ../scss/theme/modules/_main.scss */
   .hero .inner {
     width: 100%;
     float: left;
@@ -1498,7 +1503,7 @@ a.chopstick {
     padding-left: 0px;
     padding-right: 0px; }
     @media screen and (min-width: 42.5em) {
-      /* line 13, ../scss/theme/modules/_main.scss */
+      /* line 12, ../scss/theme/modules/_main.scss */
       .hero .inner {
         text-align: center;
         width: 66.66667%;
@@ -1507,7 +1512,7 @@ a.chopstick {
         padding-left: 0px;
         padding-right: 0px;
         left: 16.66667%; } }
-  /* line 23, ../scss/theme/modules/_main.scss */
+  /* line 22, ../scss/theme/modules/_main.scss */
   .hero p {
     padding-left: 5px;
     color: #777777;
@@ -1515,23 +1520,32 @@ a.chopstick {
     line-height: 1.75;
     padding-top: 0.4375em;
     padding-bottom: 1.3125em; }
-  /* line 29, ../scss/theme/modules/_main.scss */
+  /* line 28, ../scss/theme/modules/_main.scss */
   .hero em {
     font-weight: 300; }
   /* line 33, ../scss/theme/modules/_main.scss */
-  .hero .intro a {
+  .hero .intro a,
+  .hero p a {
     border-bottom: 1px solid #90befa; }
     /* line 37, ../scss/theme/modules/_main.scss */
-    .hero .intro a:hover, .hero .intro a:focus {
+    .hero .intro a:hover, .hero .intro a:focus,
+    .hero p a:hover,
+    .hero p a:focus {
       border-bottom: 1px solid #c1dafc; }
+  /* line 42, ../scss/theme/modules/_main.scss */
+  .hero .prelude {
+    font-family: "Fira Sans", sans-serif;
+    color: #444444;
+    font-style: italic;
+    padding-bottom: 0; }
 
-/* line 45, ../scss/theme/modules/_main.scss */
+/* line 52, ../scss/theme/modules/_main.scss */
 .blog,
 .main,
 .cta {
   background-color: white; }
 
-/* line 51, ../scss/theme/modules/_main.scss */
+/* line 57, ../scss/theme/modules/_main.scss */
 .main__header {
   width: 100%;
   float: left;
@@ -1541,7 +1555,7 @@ a.chopstick {
   padding-top: 0.625em;
   padding-bottom: 1.875em; }
   @media screen and (min-width: 42.5em) {
-    /* line 51, ../scss/theme/modules/_main.scss */
+    /* line 57, ../scss/theme/modules/_main.scss */
     .main__header {
       text-align: center;
       width: 66.66667%;
@@ -1552,7 +1566,7 @@ a.chopstick {
       left: 16.66667%;
       padding-top: 4.375em;
       padding-bottom: 1.875em; } }
-  /* line 62, ../scss/theme/modules/_main.scss */
+  /* line 68, ../scss/theme/modules/_main.scss */
   .main__header p {
     color: #777777;
     font-size: 1em;
@@ -1560,16 +1574,44 @@ a.chopstick {
     padding-top: 0.4375em;
     padding-bottom: 1.3125em; }
 
-/* line 73, ../scss/theme/modules/_main.scss */
+/* line 78, ../scss/theme/modules/_main.scss */
+.blog--list {
+  border-top: 6px solid #efefef; }
+
+/* line 82, ../scss/theme/modules/_main.scss */
+.blog--list__title {
+  font-weight: 500;
+  padding: 0; }
+
+/* line 87, ../scss/theme/modules/_main.scss */
+.blog--list__date {
+  font-family: "Fira Sans", sans-serif;
+  font-style: italic;
+  color: #777777;
+  padding: 0; }
+
+/* line 94, ../scss/theme/modules/_main.scss */
+.blog--list__link {
+  margin-top: 1.25em;
+  margin-bottom: 0em; }
+
+/* line 98, ../scss/theme/modules/_main.scss */
+.blog--list__link a {
+  border-bottom: 1px solid #90befa; }
+  /* line 102, ../scss/theme/modules/_main.scss */
+  .blog--list__link a:hover, .blog--list__link a:focus {
+    border-bottom: 1px solid #c1dafc; }
+
+/* line 109, ../scss/theme/modules/_main.scss */
 .blog--detail {
   padding-top: 0.625em;
   padding-bottom: 1.875em; }
   @media screen and (min-width: 42.5em) {
-    /* line 73, ../scss/theme/modules/_main.scss */
+    /* line 109, ../scss/theme/modules/_main.scss */
     .blog--detail {
       padding-top: 4.375em;
       padding-bottom: 5.625em; } }
-  /* line 80, ../scss/theme/modules/_main.scss */
+  /* line 116, ../scss/theme/modules/_main.scss */
   .blog--detail .tagline {
     padding-left: 5px;
     color: #777777;
@@ -1577,27 +1619,27 @@ a.chopstick {
     line-height: 1.75;
     padding-top: 0.4375em;
     padding-bottom: 1.3125em; }
-  /* line 86, ../scss/theme/modules/_main.scss */
+  /* line 122, ../scss/theme/modules/_main.scss */
   .blog--detail em {
     font-weight: 300; }
-  /* line 90, ../scss/theme/modules/_main.scss */
+  /* line 126, ../scss/theme/modules/_main.scss */
   .blog--detail img {
     margin-top: 0.3125em;
     margin-bottom: 0.625em; }
-  /* line 94, ../scss/theme/modules/_main.scss */
+  /* line 130, ../scss/theme/modules/_main.scss */
   .blog--detail a {
     border-bottom: 1px solid #90befa; }
-    /* line 98, ../scss/theme/modules/_main.scss */
+    /* line 134, ../scss/theme/modules/_main.scss */
     .blog--detail a:hover, .blog--detail a:focus {
       border-bottom: 1px solid #2e84f6; }
 
-/* line 104, ../scss/theme/modules/_main.scss */
+/* line 140, ../scss/theme/modules/_main.scss */
 .header__details {
   font-family: "Fira Sans", sans-serif;
   font-style: italic;
   color: #777777; }
 
-/* line 110, ../scss/theme/modules/_main.scss */
+/* line 146, ../scss/theme/modules/_main.scss */
 .blog--detail__header {
   width: 100%;
   float: left;
@@ -1608,7 +1650,7 @@ a.chopstick {
   margin-top: 0em;
   margin-bottom: 2.5em; }
   @media screen and (min-width: 42.5em) {
-    /* line 110, ../scss/theme/modules/_main.scss */
+    /* line 146, ../scss/theme/modules/_main.scss */
     .blog--detail__header {
       text-align: center;
       width: 66.66667%;
@@ -1618,7 +1660,7 @@ a.chopstick {
       padding-right: 0px;
       left: 16.66667%; } }
 
-/* line 122, ../scss/theme/modules/_main.scss */
+/* line 158, ../scss/theme/modules/_main.scss */
 .blog--detail__body {
   width: 100%;
   float: left;
@@ -1626,7 +1668,7 @@ a.chopstick {
   padding-left: 0px;
   padding-right: 0px; }
   @media screen and (min-width: 42.5em) {
-    /* line 122, ../scss/theme/modules/_main.scss */
+    /* line 158, ../scss/theme/modules/_main.scss */
     .blog--detail__body {
       width: 66.66667%;
       float: left;
@@ -1634,96 +1676,91 @@ a.chopstick {
       padding-left: 0px;
       padding-right: 0px;
       left: 16.66667%; } }
-  /* line 130, ../scss/theme/modules/_main.scss */
+  /* line 166, ../scss/theme/modules/_main.scss */
   .blog--detail__body p {
     overflow: visible; }
   @media screen and (min-width: 42.5em) {
-    /* line 134, ../scss/theme/modules/_main.scss */
+    /* line 170, ../scss/theme/modules/_main.scss */
     .blog--detail__body img {
       margin-left: -24%;
       min-width: 147.5%; } }
 
-/* line 142, ../scss/theme/modules/_main.scss */
-.blog--list {
-  border-left: 1px dotted #d0d0d0;
-  border-top: 6px solid #efefef; }
-  /* line 146, ../scss/theme/modules/_main.scss */
-  .blog--list h2 {
-    font-size: 1.125em;
-    line-height: 1.33333em;
-    margin-bottom: 0em;
-    font-weight: 500; }
-
-/* line 152, ../scss/theme/modules/_main.scss */
-.blog__date {
-  font-family: "Fira Sans", sans-serif;
-  font-style: italic;
-  color: #777777;
-  padding-top: 0; }
-
-/* line 160, ../scss/theme/modules/_main.scss */
-.cta {
-  text-align: center;
-  padding-left: 10px;
-  padding-right: 10px; }
-
-/* line 165, ../scss/theme/modules/_main.scss */
-.cta--home {
-  padding-top: 2.5em;
-  padding-bottom: 2.5em;
-  background-color: #444444; }
-
-/* line 170, ../scss/theme/modules/_main.scss */
-.cta--post {
-  border-top: 6px solid #efefef;
-  padding-top: 1.25em;
-  padding-bottom: 2.5em; }
-
-/* line 180, ../scss/theme/modules/_main.scss */
-.media--block {
-  float: left;
-  width: 100%;
-  padding-top: 0.1875em;
-  padding-bottom: 0.3125em;
-  padding-left: 13px;
-  padding-right: 13px;
-  border-bottom: 1px dotted #d0d0d0;
-  border-right: 1px dotted #d0d0d0; }
-  @media screen and (min-width: 42.5em) {
-    /* line 180, ../scss/theme/modules/_main.scss */
-    .media--block {
-      width: 50%;
-      height: 14em;
-      padding-top: 0.125em;
-      padding-bottom: 0.625em;
-      padding-left: 20px;
-      padding-right: 20px; } }
-  @media screen and (min-width: 71.25em) {
-    /* line 180, ../scss/theme/modules/_main.scss */
-    .media--block {
-      width: 25%;
-      height: 17em; } }
-
-/* line 201, ../scss/theme/modules/_main.scss */
-.media--link {
-  cursor: pointer;
-  -webkit-transition: background-color 0.3s ease-in;
-  -moz-transition: background-color 0.3s ease-in;
-  -o-transition: background-color 0.3s ease-in;
-  transition: background-color 0.3s ease-in; }
-
-/* line 207, ../scss/theme/modules/_main.scss */
-.media--link:hover,
-.media--link:focus {
-  background-color: #f6f6f6; }
-
-/* line 211, ../scss/theme/modules/_main.scss */
+/* line 178, ../scss/theme/modules/_main.scss */
 .share-list {
   list-style: none;
   margin: 0;
   padding: 0;
   margin-top: 1.875em;
   margin-bottom: 0em; }
+
+/* line 186, ../scss/theme/modules/_main.scss */
+.cta {
+  text-align: center;
+  padding-left: 10px;
+  padding-right: 10px; }
+
+/* line 191, ../scss/theme/modules/_main.scss */
+.cta--home {
+  padding-top: 2.5em;
+  padding-bottom: 2.5em;
+  background-color: #444444; }
+
+/* line 196, ../scss/theme/modules/_main.scss */
+.cta--post {
+  border-top: 6px solid #efefef;
+  padding-top: 1.25em;
+  padding-bottom: 2.5em; }
+
+/* line 207, ../scss/theme/modules/_main.scss */
+.media--block {
+  float: left;
+  width: 100%;
+  padding-top: 0.625em;
+  padding-bottom: 0.625em;
+  padding-left: 5px;
+  padding-right: 5px;
+  border-bottom: 1px dotted #d0d0d0; }
+  @media screen and (min-width: 42.5em) {
+    /* line 207, ../scss/theme/modules/_main.scss */
+    .media--block {
+      padding-top: 1.25em;
+      padding-bottom: 1.25em;
+      padding-left: 10px;
+      padding-right: 10px; } }
+  @media screen and (min-width: 71.25em) {
+    /* line 207, ../scss/theme/modules/_main.scss */
+    .media--block {
+      padding-top: 1.875em;
+      padding-bottom: 1.875em; } }
+
+/* line 224, ../scss/theme/modules/_main.scss */
+.media__header {
+  width: 100%;
+  padding-top: 0.625em;
+  padding-bottom: 0.625em; }
+  @media screen and (min-width: 42.5em) {
+    /* line 224, ../scss/theme/modules/_main.scss */
+    .media__header {
+      float: left;
+      width: 30%;
+      padding-left: 0px;
+      padding-right: 10px; } }
+
+/* line 236, ../scss/theme/modules/_main.scss */
+.media__body {
+  width: 100%;
+  padding-top: 0.625em;
+  padding-bottom: 0.625em; }
+  @media screen and (min-width: 42.5em) {
+    /* line 236, ../scss/theme/modules/_main.scss */
+    .media__body {
+      float: left;
+      width: 70%;
+      padding-left: 10px;
+      padding-right: 0px; } }
+  /* line 246, ../scss/theme/modules/_main.scss */
+  .media__body p {
+    padding: 0; }
 
 /* line 5, ../scss/theme/modules/_styleguide.scss */
 .main-content {
