--- a/scss/theme/_base.scss
+++ b/scss/theme/_base.scss
@@ -12,13 +12,13 @@ html {
 	background-color: $alpha-ui-color;
 	-webkit-overflow-scrolling: touch;
 	-webkit-text-size-adjust: 100%;
-	    -ms-text-size-adjust: 100%;
+		-ms-text-size-adjust: 100%;
 	font: $alpha-font-weight $alpha-font-size/16*100%/#{$alpha-line-height} $alpha-font-family ;
 }
 
 body {
 	-webkit-font-smoothing: antialiased;
-	        font-smoothing: antialiased;
+			font-smoothing: antialiased;
 	text-rendering : optimizelegibility;
 	color: $alpha-text-color;
 }
@@ -36,10 +36,15 @@ body {
 }
 
 hr {
-	border: 1px solid lighten($alpha-text-color,60);
-	border-width: 1px 0 0;
+	border: none;
+	border-bottom: 1px solid lighten($alpha-text-color,60);
+
 	clear: both;
-	margin: 0 0 $alpha-line-height * 1em;
+	@include em-margin-tb(1.5,1);
+}
+
+.divider--dotted {
+	border-bottom: 1px dotted lighten($alpha-text-color,60);
 }
 
 //
@@ -63,8 +68,8 @@ h1 {
 }
 
 h2 {
-	@include text-dimensions(21,1,0,1,0);
-	font-weight: 700;
+	@include text-dimensions(18,1,0,1,0);
+	font-weight: 500;
 }
 
 h3 {
