--- a/scss/theme/modules/_main.scss
+++ b/scss/theme/modules/_main.scss
@@ -1,6 +1,5 @@
-//
-// module: home
-//
+// Main
+// -------------------
 
 .hero {
 	background-color: $white-color;
@@ -30,13 +29,21 @@
 		font-weight: 300;
 	}
 
-	.intro a {
+	.intro a,
+	p a {
 		border-bottom: 1px solid lighten($alpha-ui-color,30);
 
 		&:hover,
 		&:focus {
 			border-bottom: 1px solid lighten($alpha-ui-color,40);
 		}
+	}
+
+	.prelude {
+		font-family: $beta-font-family;
+		color: $alpha-text-color;
+		font-style: italic;
+		padding-bottom: 0;
 	}
 }
 
@@ -47,7 +54,6 @@
 	background-color: $white-color;
 }
 
-// Main
 .main__header {
 	@include box-(12,0,0);
 	@include em-padding-tb(1,3);
@@ -65,11 +71,41 @@
 	}
 }
 
-.main__body {
+// Blog
+// -------------------
+// Blog list
 
+.blog--list {
+	border-top: 6px solid lighten($grey-color,47);
 }
 
-// Blog
+.blog--list__title {
+	font-weight: 500;
+	padding: 0;
+}
+
+.blog--list__date {
+	font-family: $beta-font-family;
+	font-style: italic;
+	color: $beta-text-color;
+	padding: 0;
+}
+
+.blog--list__link {
+	@include em-margin-tb(2, 0);
+}
+
+.blog--list__link a {
+	border-bottom: 1px solid lighten($alpha-ui-color,30);
+
+	&:hover,
+	&:focus {
+		border-bottom: 1px solid lighten($alpha-ui-color,40);
+	}
+}
+
+// Blog detail
+
 .blog--detail {
 	@include em-padding-tb(1,3);
 
@@ -139,23 +175,13 @@
 	}
 }
 
-.blog--list {
-	border-left: 1px dotted lighten($grey-color,35);
-	border-top: 6px solid lighten($grey-color,47);
-
-	h2 {
-		@include text-dimensions(18,1,0,0,0);
-		font-weight: 500;
-	}
+.share-list {
+	@include list-nav;
+	@include em-margin-tb(3, 0);
 }
 
-.blog__date {
-	font-family: $beta-font-family;
-	font-style: italic;
-	color: $beta-text-color;
-	padding-top: 0;
-
-}
+// CTA
+// -------------------
 
 .cta {
 	text-align: center;
@@ -173,6 +199,7 @@
 }
 
 // Media object
+// -------------------
 .media {
 	@extend %clearfix;
 }
@@ -180,36 +207,46 @@
 .media--block {
 	float: left;
 	width: 100%;
-	@include em-padding-tb(0.3, 0.5);
-	@include px-padding-lr(1.3);
+	@include em-padding-tb(1);
+	@include px-padding-lr(0.5);
 	border-bottom: 1px dotted lighten($grey-color,35);
-	border-right: 1px dotted lighten($grey-color,35);
 
 	@include mq($bp3) {
-		width: 50%;
-		height: 14em;
-		@include em-padding-tb(0.2, 1);
-		@include px-padding-lr(2);
+		@include em-padding-tb(2);
+		@include px-padding-lr(1);
 	}
 
 	@include mq($bp5) {
-		width: 25%;
-		height: 17em;
+		@include em-padding-tb(3);
 	}
 }
 
-.media--link {
-	cursor: pointer;
-	@include transition(background-color 0.3s ease-in);
+.media__header {
+	width: 100%;
+	@include em-padding-tb(1);
+
+
+	@include mq($bp3) {
+		float: left;
+		width: 30%;
+		@include px-padding-lr(0, 1);
+	}
 }
 
-.media--link:hover,
-.media--link:focus {
-	background-color: lighten($grey-color,50);
+.media__body {
+	width: 100%;
+	@include em-padding-tb(1, 1);
+
+	@include mq($bp3) {
+		float: left;
+		width: 70%;
+		@include px-padding-lr(1, 0);
+	}
+
+	p {
+		padding: 0;
+	}
 }
 
-.share-list {
-	@include list-nav;
-	@include em-margin-tb(3, 0);
-}
+
 
