--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -57,7 +57,7 @@
 				{{ content }}
 				<ul class="share-list">
 					<li>
-						<div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+						<div class="fb-like" data-href="{{ site.url }}{{ post.url }}" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
 					</li>
 					<li>
 						<a href="https://twitter.com/share" class="twitter-share-button" data-lang="en">Tweet</a>
