fix the og:description tag

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,10 +35,10 @@
 		Add your font license here, if necessary.
 	-->
 
-	<meta property="og:image" content="img/facebook.jpg" />
+	<meta property="og:image" content="{{ site.url }}/img/facebook.jpg" />
 	<meta property="og:title" content="{{ page.title }}"/>
 	<meta property="og:url" content="{{ site.url }}{{ page.url }}"/>
-	<meta property="og:description" content="{{ post.excerpt }}"/>
+	<meta property="og:description" content="{{ page.excerpt }}"/>
 </head>
 
 <body{% if page.section %} class="v-{{ page.section }}"{% endif%} >
