fix facebook image link

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,7 +35,7 @@
 		Add your font license here, if necessary.
 	-->
 
-	<meta property="og:image" content="{{ site.url }}/img/facebook.jpg" />
+	<meta property="og:image" content="{{ site.url }}/img/facebook.png" />
 	<meta property="og:title" content="{{ page.title }}"/>
 	<meta property="og:url" content="{{ site.url }}{{ page.url }}"/>
 	<meta property="og:description" content="{{ page.excerpt }}"/>
